terraform/modules/network/vpc.tf
resource "aws_vpc" "main" {
  cidr_block       = var.vpc_cidr
  instance_tenancy = "default"

  tags = merge(var.tags, {
    Name = "${var.environment}-${var.project}-vpc"
  })
}
